y.output
Grammar

    0 $accept: initial $end

    1 initial: program

    2 program: cmd
    3        | program cmd

    4 cmd: function
    5    | procedure

    6 function: FUNCTION VALTYPE ID '(' parameter_list ')' '{' func_body '}'

    7 procedure: FUNCTION VOID ID '(' parameter_list ')' '{' proc_body '}'

    8 parameter_list: parameter_list_no_empty
    9               | epsilon

   10 parameter_list_no_empty: type_list ';' parameter_list_no_empty
   11                        | type_list

   12 type_list: VALTYPE param

   13 param: ID ',' param
   14      | ID

   15 func_body: declarations nested_statements_with_return
   16          | nested_statements_with_return

   17 proc_body: declarations nested_statements
   18          | declarations
   19          | nested_statements
   20          | epsilon

   21 declarations: declaration declarations
   22             | declaration
   23             | function declarations
   24             | function
   25             | procedure declarations
   26             | procedure

   27 primitive_val: BOOLVAL
   28              | CHARVAL
   29              | DECIMALINTVAL
   30              | HEXINTVAL
   31              | REALVAL
   32              | NULLP

   33 declaration: primitive_declaration
   34            | STRING string_declaration ';'

   35 primitive_declaration: VAR VALTYPE declaration_parameters ';'

   36 declaration_parameters: ID ',' declaration_parameters
   37                       | primitive_assign ',' declaration_parameters
   38                       | ID
   39                       | primitive_assign

   40 string_declaration: string_parameters ',' string_declaration
   41                   | string_parameters

   42 string_parameters: ID '[' expression ']'
   43                  | ID '[' expression ']' ASS STRINGVAL

   44 nested_statements_with_return: stmt nested_statements_with_return
   45                              | return ';'

   46 nested_statements: stmt
   47                  | stmt nested_statements

   48 stmt: assign ';'
   49     | code_block
   50     | conditions
   51     | loops
   52     | procedure_func_call ';'
   53     | return ';'

   54 assign: primitive_assign
   55       | index_assign
   56       | string_assign
   57       | pointer_assign

   58 primitive_assign: ID ASS expression

   59 index_assign: ID '[' expression ']' ASS expression

   60 string_assign: ID ASS STRINGVAL

   61 pointer_assign: MUL ID ASS expression

   62 code_block: '{' declaration_no_function nested_statements '}'
   63           | '{' declaration_no_function '}'
   64           | '{' nested_statements '}'
   65           | '{' epsilon '}'

   66 declaration_no_function: declaration declaration_no_function
   67                        | declaration

   68 conditions: IF '(' expression ')' stmt
   69           | IF '(' expression ')' stmt ELSE stmt

   70 loops: WHILE '(' expression ')' stmt
   71      | DO code_block WHILE '(' expression ')' ';'
   72      | FOR '(' multi_assign ';' expression ';' update ')' stmt

   73 multi_assign: primitive_assign ',' multi_assign
   74             | primitive_assign

   75 update: ID PLUS PLUS
   76       | ID MINUS MINUS
   77       | multi_assign

   78 procedure_func_call: ID '(' expression_list ')'

   79 expression_list: expression ',' expression_list
   80                | expression
   81                | epsilon

   82 return: RETURN expression

   83 expression: expression PLUS expression
   84           | expression MINUS expression
   85           | expression DIV expression
   86           | expression MUL expression
   87           | expression AND expression
   88           | expression OR expression
   89           | expression EQ expression
   90           | expression NOTEQ expression
   91           | expression G expression
   92           | expression GE expression
   93           | expression L expression
   94           | expression LE expression
   95           | unary_op expression
   96           | primitive_val
   97           | ID
   98           | procedure_func_call
   99           | '|' ID '|'
  100           | '(' expression ')'
  101           | ADDRESS ID
  102           | ADDRESS ID '[' expression ']'
  103           | ID '[' expression ']'

  104 unary_op: PLUS
  105         | MINUS
  106         | NOT
  107         | MUL

  108 epsilon: %empty


Terminals, with rules where they appear

$end (0) 0
'(' (40) 6 7 68 69 70 71 72 78 100
')' (41) 6 7 68 69 70 71 72 78 100
',' (44) 13 36 37 40 73 79
';' (59) 10 34 35 45 48 52 53 71 72
'[' (91) 42 43 59 102 103
']' (93) 42 43 59 102 103
'{' (123) 6 7 62 63 64 65
'|' (124) 99
'}' (125) 6 7 62 63 64 65
error (256)
VALTYPE (258) 6 12 35
STRING (259) 34
IF (260) 68 69
ELSE (261) 69
WHILE (262) 70 71
FOR (263) 72
VAR (264) 35
FUNCTION (265) 6 7
RETURN (266) 82
NULLP (267) 32
VOID (268) 7
DO (269) 71
PLUS (270) 75 83 104
MINUS (271) 76 84 105
DIV (272) 85
MUL (273) 61 86 107
ASS (274) 43 58 59 60 61
AND (275) 87
EQ (276) 89
G (277) 91
GE (278) 92
L (279) 93
LE (280) 94
NOT (281) 106
NOTEQ (282) 90
OR (283) 88
ADDRESS (284) 101 102
BOOLVAL (285) 27
CHARVAL (286) 28
DECIMALINTVAL (287) 29
HEXINTVAL (288) 30
REALVAL (289) 31
STRINGVAL (290) 43 60
ID (291) 6 7 13 14 36 38 42 43 58 59 60 61 75 76 78 97 99 101 102 103
LOWER_THEN_ELSE (292)
UNARY (293)


Nonterminals, with rules where they appear

$accept (48)
    on left: 0
initial (49)
    on left: 1, on right: 0
program (50)
    on left: 2 3, on right: 1 3
cmd (51)
    on left: 4 5, on right: 2 3
function (52)
    on left: 6, on right: 4 23 24
procedure (53)
    on left: 7, on right: 5 25 26
parameter_list (54)
    on left: 8 9, on right: 6 7
parameter_list_no_empty (55)
    on left: 10 11, on right: 8 10
type_list (56)
    on left: 12, on right: 10 11
param (57)
    on left: 13 14, on right: 12 13
func_body (58)
    on left: 15 16, on right: 6
proc_body (59)
    on left: 17 18 19 20, on right: 7
declarations (60)
    on left: 21 22 23 24 25 26, on right: 15 17 18 21 23 25
primitive_val (61)
    on left: 27 28 29 30 31 32, on right: 96
declaration (62)
    on left: 33 34, on right: 21 22 66 67
primitive_declaration (63)
    on left: 35, on right: 33
declaration_parameters (64)
    on left: 36 37 38 39, on right: 35 36 37
string_declaration (65)
    on left: 40 41, on right: 34 40
string_parameters (66)
    on left: 42 43, on right: 40 41
nested_statements_with_return (67)
    on left: 44 45, on right: 15 16 44
nested_statements (68)
    on left: 46 47, on right: 17 19 47 62 64
stmt (69)
    on left: 48 49 50 51 52 53, on right: 44 46 47 68 69 70 72
assign (70)
    on left: 54 55 56 57, on right: 48
primitive_assign (71)
    on left: 58, on right: 37 39 54 73 74
index_assign (72)
    on left: 59, on right: 55
string_assign (73)
    on left: 60, on right: 56
pointer_assign (74)
    on left: 61, on right: 57
code_block (75)
    on left: 62 63 64 65, on right: 49 71
declaration_no_function (76)
    on left: 66 67, on right: 62 63 66
conditions (77)
    on left: 68 69, on right: 50
loops (78)
    on left: 70 71 72, on right: 51
multi_assign (79)
    on left: 73 74, on right: 72 73 77
update (80)
    on left: 75 76 77, on right: 72
procedure_func_call (81)
    on left: 78, on right: 52 98
expression_list (82)
    on left: 79 80 81, on right: 78 79
return (83)
    on left: 82, on right: 45 53
expression (84)
    on left: 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100
    101 102 103, on right: 42 43 58 59 61 68 69 70 71 72 79 80 82 83
    84 85 86 87 88 89 90 91 92 93 94 95 100 102 103
unary_op (85)
    on left: 104 105 106 107, on right: 95
epsilon (86)
    on left: 108, on right: 9 20 65 81


State 0

    0 $accept: . initial $end

    FUNCTION  shift, and go to state 1

    initial    go to state 2
    program    go to state 3
    cmd        go to state 4
    function   go to state 5
    procedure  go to state 6


State 1

    6 function: FUNCTION . VALTYPE ID '(' parameter_list ')' '{' func_body '}'
    7 procedure: FUNCTION . VOID ID '(' parameter_list ')' '{' proc_body '}'

    VALTYPE  shift, and go to state 7
    VOID     shift, and go to state 8


State 2

    0 $accept: initial . $end

    $end  shift, and go to state 9


State 3

    1 initial: program .
    3 program: program . cmd

    FUNCTION  shift, and go to state 1

    $default  reduce using rule 1 (initial)

    cmd        go to state 10
    function   go to state 5
    procedure  go to state 6


State 4

    2 program: cmd .

    $default  reduce using rule 2 (program)


State 5

    4 cmd: function .

    $default  reduce using rule 4 (cmd)


State 6

    5 cmd: procedure .

    $default  reduce using rule 5 (cmd)


State 7

    6 function: FUNCTION VALTYPE . ID '(' parameter_list ')' '{' func_body '}'

    ID  shift, and go to state 11


State 8

    7 procedure: FUNCTION VOID . ID '(' parameter_list ')' '{' proc_body '}'

    ID  shift, and go to state 12


State 9

    0 $accept: initial $end .

    $default  accept


State 10

    3 program: program cmd .

    $default  reduce using rule 3 (program)


State 11

    6 function: FUNCTION VALTYPE ID . '(' parameter_list ')' '{' func_body '}'

    '('  shift, and go to state 13


State 12

    7 procedure: FUNCTION VOID ID . '(' parameter_list ')' '{' proc_body '}'

    '('  shift, and go to state 14


State 13

    6 function: FUNCTION VALTYPE ID '(' . parameter_list ')' '{' func_body '}'

    VALTYPE  shift, and go to state 15

    $default  reduce using rule 108 (epsilon)

    parameter_list           go to state 16
    parameter_list_no_empty  go to state 17
    type_list                go to state 18
    epsilon                  go to state 19


State 14

    7 procedure: FUNCTION VOID ID '(' . parameter_list ')' '{' proc_body '}'

    VALTYPE  shift, and go to state 15

    $default  reduce using rule 108 (epsilon)

    parameter_list           go to state 20
    parameter_list_no_empty  go to state 17
    type_list                go to state 18
    epsilon                  go to state 19


State 15

   12 type_list: VALTYPE . param

    ID  shift, and go to state 21

    param  go to state 22


State 16

    6 function: FUNCTION VALTYPE ID '(' parameter_list . ')' '{' func_body '}'

    ')'  shift, and go to state 23


State 17

    8 parameter_list: parameter_list_no_empty .

    $default  reduce using rule 8 (parameter_list)


State 18

   10 parameter_list_no_empty: type_list . ';' parameter_list_no_empty
   11                        | type_list .

    ';'  shift, and go to state 24

    $default  reduce using rule 11 (parameter_list_no_empty)


State 19

    9 parameter_list: epsilon .

    $default  reduce using rule 9 (parameter_list)


State 20

    7 procedure: FUNCTION VOID ID '(' parameter_list . ')' '{' proc_body '}'

    ')'  shift, and go to state 25


State 21

   13 param: ID . ',' param
   14      | ID .

    ','  shift, and go to state 26

    $default  reduce using rule 14 (param)


State 22

   12 type_list: VALTYPE param .

    $default  reduce using rule 12 (type_list)


State 23

    6 function: FUNCTION VALTYPE ID '(' parameter_list ')' . '{' func_body '}'

    '{'  shift, and go to state 27


State 24

   10 parameter_list_no_empty: type_list ';' . parameter_list_no_empty

    VALTYPE  shift, and go to state 15

    parameter_list_no_empty  go to state 28
    type_list                go to state 18


State 25

    7 procedure: FUNCTION VOID ID '(' parameter_list ')' . '{' proc_body '}'

    '{'  shift, and go to state 29


State 26

   13 param: ID ',' . param

    ID  shift, and go to state 21

    param  go to state 30


State 27

    6 function: FUNCTION VALTYPE ID '(' parameter_list ')' '{' . func_body '}'

    STRING    shift, and go to state 31
    IF        shift, and go to state 32
    WHILE     shift, and go to state 33
    FOR       shift, and go to state 34
    VAR       shift, and go to state 35
    FUNCTION  shift, and go to state 1
    RETURN    shift, and go to state 36
    DO        shift, and go to state 37
    MUL       shift, and go to state 38
    ID        shift, and go to state 39
    '{'       shift, and go to state 40

    function                       go to state 41
    procedure                      go to state 42
    func_body                      go to state 43
    declarations                   go to state 44
    declaration                    go to state 45
    primitive_declaration          go to state 46
    nested_statements_with_return  go to state 47
    stmt                           go to state 48
    assign                         go to state 49
    primitive_assign               go to state 50
    index_assign                   go to state 51
    string_assign                  go to state 52
    pointer_assign                 go to state 53
    code_block                     go to state 54
    conditions                     go to state 55
    loops                          go to state 56
    procedure_func_call            go to state 57
    return                         go to state 58


State 28

   10 parameter_list_no_empty: type_list ';' parameter_list_no_empty .

    $default  reduce using rule 10 (parameter_list_no_empty)


State 29

    7 procedure: FUNCTION VOID ID '(' parameter_list ')' '{' . proc_body '}'

    STRING    shift, and go to state 31
    IF        shift, and go to state 32
    WHILE     shift, and go to state 33
    FOR       shift, and go to state 34
    VAR       shift, and go to state 35
    FUNCTION  shift, and go to state 1
    RETURN    shift, and go to state 36
    DO        shift, and go to state 37
    MUL       shift, and go to state 38
    ID        shift, and go to state 39
    '{'       shift, and go to state 40

    $default  reduce using rule 108 (epsilon)

    function               go to state 41
    procedure              go to state 42
    proc_body              go to state 59
    declarations           go to state 60
    declaration            go to state 45
    primitive_declaration  go to state 46
    nested_statements      go to state 61
    stmt                   go to state 62
    assign                 go to state 49
    primitive_assign       go to state 50
    index_assign           go to state 51
    string_assign          go to state 52
    pointer_assign         go to state 53
    code_block             go to state 54
    conditions             go to state 55
    loops                  go to state 56
    procedure_func_call    go to state 57
    return                 go to state 63
    epsilon                go to state 64


State 30

   13 param: ID ',' param .

    $default  reduce using rule 13 (param)


State 31

   34 declaration: STRING . string_declaration ';'

    ID  shift, and go to state 65

    string_declaration  go to state 66
    string_parameters   go to state 67


State 32

   68 conditions: IF . '(' expression ')' stmt
   69           | IF . '(' expression ')' stmt ELSE stmt

    '('  shift, and go to state 68


State 33

   70 loops: WHILE . '(' expression ')' stmt

    '('  shift, and go to state 69


State 34

   72 loops: FOR . '(' multi_assign ';' expression ';' update ')' stmt

    '('  shift, and go to state 70


State 35

   35 primitive_declaration: VAR . VALTYPE declaration_parameters ';'

    VALTYPE  shift, and go to state 71


State 36

   82 return: RETURN . expression

    NULLP          shift, and go to state 72
    PLUS           shift, and go to state 73
    MINUS          shift, and go to state 74
    MUL            shift, and go to state 75
    NOT            shift, and go to state 76
    ADDRESS        shift, and go to state 77
    BOOLVAL        shift, and go to state 78
    CHARVAL        shift, and go to state 79
    DECIMALINTVAL  shift, and go to state 80
    HEXINTVAL      shift, and go to state 81
    REALVAL        shift, and go to state 82
    ID             shift, and go to state 83
    '('            shift, and go to state 84
    '|'            shift, and go to state 85

    primitive_val        go to state 86
    procedure_func_call  go to state 87
    expression           go to state 88
    unary_op             go to state 89


State 37

   71 loops: DO . code_block WHILE '(' expression ')' ';'

    '{'  shift, and go to state 40

    code_block  go to state 90


State 38

   61 pointer_assign: MUL . ID ASS expression

    ID  shift, and go to state 91


State 39

   58 primitive_assign: ID . ASS expression
   59 index_assign: ID . '[' expression ']' ASS expression
   60 string_assign: ID . ASS STRINGVAL
   78 procedure_func_call: ID . '(' expression_list ')'

    ASS  shift, and go to state 92
    '('  shift, and go to state 93
    '['  shift, and go to state 94


State 40

   62 code_block: '{' . declaration_no_function nested_statements '}'
   63           | '{' . declaration_no_function '}'
   64           | '{' . nested_statements '}'
   65           | '{' . epsilon '}'

    STRING  shift, and go to state 31
    IF      shift, and go to state 32
    WHILE   shift, and go to state 33
    FOR     shift, and go to state 34
    VAR     shift, and go to state 35
    RETURN  shift, and go to state 36
    DO      shift, and go to state 37
    MUL     shift, and go to state 38
    ID      shift, and go to state 39
    '{'     shift, and go to state 40

    $default  reduce using rule 108 (epsilon)

    declaration              go to state 95
    primitive_declaration    go to state 46
    nested_statements        go to state 96
    stmt                     go to state 62
    assign                   go to state 49
    primitive_assign         go to state 50
    index_assign             go to state 51
    string_assign            go to state 52
    pointer_assign           go to state 53
    code_block               go to state 54
    declaration_no_function  go to state 97
    conditions               go to state 55
    loops                    go to state 56
    procedure_func_call      go to state 57
    return                   go to state 63
    epsilon                  go to state 98


State 41

   23 declarations: function . declarations
   24             | function .

    STRING    shift, and go to state 31
    VAR       shift, and go to state 35
    FUNCTION  shift, and go to state 1

    $default  reduce using rule 24 (declarations)

    function               go to state 41
    procedure              go to state 42
    declarations           go to state 99
    declaration            go to state 45
    primitive_declaration  go to state 46


State 42

   25 declarations: procedure . declarations
   26             | procedure .

    STRING    shift, and go to state 31
    VAR       shift, and go to state 35
    FUNCTION  shift, and go to state 1

    $default  reduce using rule 26 (declarations)

    function               go to state 41
    procedure              go to state 42
    declarations           go to state 100
    declaration            go to state 45
    primitive_declaration  go to state 46


State 43

    6 function: FUNCTION VALTYPE ID '(' parameter_list ')' '{' func_body . '}'

    '}'  shift, and go to state 101


State 44

   15 func_body: declarations . nested_statements_with_return

    IF      shift, and go to state 32
    WHILE   shift, and go to state 33
    FOR     shift, and go to state 34
    RETURN  shift, and go to state 36
    DO      shift, and go to state 37
    MUL     shift, and go to state 38
    ID      shift, and go to state 39
    '{'     shift, and go to state 40

    nested_statements_with_return  go to state 102
    stmt                           go to state 48
    assign                         go to state 49
    primitive_assign               go to state 50
    index_assign                   go to state 51
    string_assign                  go to state 52
    pointer_assign                 go to state 53
    code_block                     go to state 54
    conditions                     go to state 55
    loops                          go to state 56
    procedure_func_call            go to state 57
    return                         go to state 58


State 45

   21 declarations: declaration . declarations
   22             | declaration .

    STRING    shift, and go to state 31
    VAR       shift, and go to state 35
    FUNCTION  shift, and go to state 1

    $default  reduce using rule 22 (declarations)

    function               go to state 41
    procedure              go to state 42
    declarations           go to state 103
    declaration            go to state 45
    primitive_declaration  go to state 46


State 46

   33 declaration: primitive_declaration .

    $default  reduce using rule 33 (declaration)


State 47

   16 func_body: nested_statements_with_return .

    $default  reduce using rule 16 (func_body)


State 48

   44 nested_statements_with_return: stmt . nested_statements_with_return

    IF      shift, and go to state 32
    WHILE   shift, and go to state 33
    FOR     shift, and go to state 34
    RETURN  shift, and go to state 36
    DO      shift, and go to state 37
    MUL     shift, and go to state 38
    ID      shift, and go to state 39
    '{'     shift, and go to state 40

    nested_statements_with_return  go to state 104
    stmt                           go to state 48
    assign                         go to state 49
    primitive_assign               go to state 50
    index_assign                   go to state 51
    string_assign                  go to state 52
    pointer_assign                 go to state 53
    code_block                     go to state 54
    conditions                     go to state 55
    loops                          go to state 56
    procedure_func_call            go to state 57
    return                         go to state 58


State 49

   48 stmt: assign . ';'

    ';'  shift, and go to state 105


State 50

   54 assign: primitive_assign .

    $default  reduce using rule 54 (assign)


State 51

   55 assign: index_assign .

    $default  reduce using rule 55 (assign)


State 52

   56 assign: string_assign .

    $default  reduce using rule 56 (assign)


State 53

   57 assign: pointer_assign .

    $default  reduce using rule 57 (assign)


State 54

   49 stmt: code_block .

    $default  reduce using rule 49 (stmt)


State 55

   50 stmt: conditions .

    $default  reduce using rule 50 (stmt)


State 56

   51 stmt: loops .

    $default  reduce using rule 51 (stmt)


State 57

   52 stmt: procedure_func_call . ';'

    ';'  shift, and go to state 106


State 58

   45 nested_statements_with_return: return . ';'
   53 stmt: return . ';'

    ';'  shift, and go to state 107


State 59

    7 procedure: FUNCTION VOID ID '(' parameter_list ')' '{' proc_body . '}'

    '}'  shift, and go to state 108


State 60

   17 proc_body: declarations . nested_statements
   18          | declarations .

    IF      shift, and go to state 32
    WHILE   shift, and go to state 33
    FOR     shift, and go to state 34
    RETURN  shift, and go to state 36
    DO      shift, and go to state 37
    MUL     shift, and go to state 38
    ID      shift, and go to state 39
    '{'     shift, and go to state 40

    $default  reduce using rule 18 (proc_body)

    nested_statements    go to state 109
    stmt                 go to state 62
    assign               go to state 49
    primitive_assign     go to state 50
    index_assign         go to state 51
    string_assign        go to state 52
    pointer_assign       go to state 53
    code_block           go to state 54
    conditions           go to state 55
    loops                go to state 56
    procedure_func_call  go to state 57
    return               go to state 63


State 61

   19 proc_body: nested_statements .

    $default  reduce using rule 19 (proc_body)


State 62

   46 nested_statements: stmt .
   47                  | stmt . nested_statements

    IF      shift, and go to state 32
    WHILE   shift, and go to state 33
    FOR     shift, and go to state 34
    RETURN  shift, and go to state 36
    DO      shift, and go to state 37
    MUL     shift, and go to state 38
    ID      shift, and go to state 39
    '{'     shift, and go to state 40

    $default  reduce using rule 46 (nested_statements)

    nested_statements    go to state 110
    stmt                 go to state 62
    assign               go to state 49
    primitive_assign     go to state 50
    index_assign         go to state 51
    string_assign        go to state 52
    pointer_assign       go to state 53
    code_block           go to state 54
    conditions           go to state 55
    loops                go to state 56
    procedure_func_call  go to state 57
    return               go to state 63


State 63

   53 stmt: return . ';'

    ';'  shift, and go to state 111


State 64

   20 proc_body: epsilon .

    $default  reduce using rule 20 (proc_body)


State 65

   42 string_parameters: ID . '[' expression ']'
   43                  | ID . '[' expression ']' ASS STRINGVAL

    '['  shift, and go to state 112


State 66

   34 declaration: STRING string_declaration . ';'

    ';'  shift, and go to state 113


State 67

   40 string_declaration: string_parameters . ',' string_declaration
   41                   | string_parameters .

    ','  shift, and go to state 114

    $default  reduce using rule 41 (string_declaration)


State 68

   68 conditions: IF '(' . expression ')' stmt
   69           | IF '(' . expression ')' stmt ELSE stmt

    NULLP          shift, and go to state 72
    PLUS           shift, and go to state 73
    MINUS          shift, and go to state 74
    MUL            shift, and go to state 75
    NOT            shift, and go to state 76
    ADDRESS        shift, and go to state 77
    BOOLVAL        shift, and go to state 78
    CHARVAL        shift, and go to state 79
    DECIMALINTVAL  shift, and go to state 80
    HEXINTVAL      shift, and go to state 81
    REALVAL        shift, and go to state 82
    ID             shift, and go to state 83
    '('            shift, and go to state 84
    '|'            shift, and go to state 85

    primitive_val        go to state 86
    procedure_func_call  go to state 87
    expression           go to state 115
    unary_op             go to state 89


State 69

   70 loops: WHILE '(' . expression ')' stmt

    NULLP          shift, and go to state 72
    PLUS           shift, and go to state 73
    MINUS          shift, and go to state 74
    MUL            shift, and go to state 75
    NOT            shift, and go to state 76
    ADDRESS        shift, and go to state 77
    BOOLVAL        shift, and go to state 78
    CHARVAL        shift, and go to state 79
    DECIMALINTVAL  shift, and go to state 80
    HEXINTVAL      shift, and go to state 81
    REALVAL        shift, and go to state 82
    ID             shift, and go to state 83
    '('            shift, and go to state 84
    '|'            shift, and go to state 85

    primitive_val        go to state 86
    procedure_func_call  go to state 87
    expression           go to state 116
    unary_op             go to state 89


State 70

   72 loops: FOR '(' . multi_assign ';' expression ';' update ')' stmt

    ID  shift, and go to state 117

    primitive_assign  go to state 118
    multi_assign      go to state 119


State 71

   35 primitive_declaration: VAR VALTYPE . declaration_parameters ';'

    ID  shift, and go to state 120

    declaration_parameters  go to state 121
    primitive_assign        go to state 122


State 72

   32 primitive_val: NULLP .

    $default  reduce using rule 32 (primitive_val)


State 73

  104 unary_op: PLUS .

    $default  reduce using rule 104 (unary_op)


State 74

  105 unary_op: MINUS .

    $default  reduce using rule 105 (unary_op)


State 75

  107 unary_op: MUL .

    $default  reduce using rule 107 (unary_op)


State 76

  106 unary_op: NOT .

    $default  reduce using rule 106 (unary_op)


State 77

  101 expression: ADDRESS . ID
  102           | ADDRESS . ID '[' expression ']'

    ID  shift, and go to state 123


State 78

   27 primitive_val: BOOLVAL .

    $default  reduce using rule 27 (primitive_val)


State 79

   28 primitive_val: CHARVAL .

    $default  reduce using rule 28 (primitive_val)


State 80

   29 primitive_val: DECIMALINTVAL .

    $default  reduce using rule 29 (primitive_val)


State 81

   30 primitive_val: HEXINTVAL .

    $default  reduce using rule 30 (primitive_val)


State 82

   31 primitive_val: REALVAL .

    $default  reduce using rule 31 (primitive_val)


State 83

   78 procedure_func_call: ID . '(' expression_list ')'
   97 expression: ID .
  103           | ID . '[' expression ']'

    '('  shift, and go to state 93
    '['  shift, and go to state 124

    $default  reduce using rule 97 (expression)


State 84

  100 expression: '(' . expression ')'

    NULLP          shift, and go to state 72
    PLUS           shift, and go to state 73
    MINUS          shift, and go to state 74
    MUL            shift, and go to state 75
    NOT            shift, and go to state 76
    ADDRESS        shift, and go to state 77
    BOOLVAL        shift, and go to state 78
    CHARVAL        shift, and go to state 79
    DECIMALINTVAL  shift, and go to state 80
    HEXINTVAL      shift, and go to state 81
    REALVAL        shift, and go to state 82
    ID             shift, and go to state 83
    '('            shift, and go to state 84
    '|'            shift, and go to state 85

    primitive_val        go to state 86
    procedure_func_call  go to state 87
    expression           go to state 125
    unary_op             go to state 89


State 85

   99 expression: '|' . ID '|'

    ID  shift, and go to state 126


State 86

   96 expression: primitive_val .

    $default  reduce using rule 96 (expression)


State 87

   98 expression: procedure_func_call .

    $default  reduce using rule 98 (expression)


State 88

   82 return: RETURN expression .
   83 expression: expression . PLUS expression
   84           | expression . MINUS expression
   85           | expression . DIV expression
   86           | expression . MUL expression
   87           | expression . AND expression
   88           | expression . OR expression
   89           | expression . EQ expression
   90           | expression . NOTEQ expression
   91           | expression . G expression
   92           | expression . GE expression
   93           | expression . L expression
   94           | expression . LE expression

    PLUS   shift, and go to state 127
    MINUS  shift, and go to state 128
    DIV    shift, and go to state 129
    MUL    shift, and go to state 130
    AND    shift, and go to state 131
    EQ     shift, and go to state 132
    G      shift, and go to state 133
    GE     shift, and go to state 134
    L      shift, and go to state 135
    LE     shift, and go to state 136
    NOTEQ  shift, and go to state 137
    OR     shift, and go to state 138

    $default  reduce using rule 82 (return)


State 89

   95 expression: unary_op . expression

    NULLP          shift, and go to state 72
    PLUS           shift, and go to state 73
    MINUS          shift, and go to state 74
    MUL            shift, and go to state 75
    NOT            shift, and go to state 76
    ADDRESS        shift, and go to state 77
    BOOLVAL        shift, and go to state 78
    CHARVAL        shift, and go to state 79
    DECIMALINTVAL  shift, and go to state 80
    HEXINTVAL      shift, and go to state 81
    REALVAL        shift, and go to state 82
    ID             shift, and go to state 83
    '('            shift, and go to state 84
    '|'            shift, and go to state 85

    primitive_val        go to state 86
    procedure_func_call  go to state 87
    expression           go to state 139
    unary_op             go to state 89


State 90

   71 loops: DO code_block . WHILE '(' expression ')' ';'

    WHILE  shift, and go to state 140


State 91

   61 pointer_assign: MUL ID . ASS expression

    ASS  shift, and go to state 141


State 92

   58 primitive_assign: ID ASS . expression
   60 string_assign: ID ASS . STRINGVAL

    NULLP          shift, and go to state 72
    PLUS           shift, and go to state 73
    MINUS          shift, and go to state 74
    MUL            shift, and go to state 75
    NOT            shift, and go to state 76
    ADDRESS        shift, and go to state 77
    BOOLVAL        shift, and go to state 78
    CHARVAL        shift, and go to state 79
    DECIMALINTVAL  shift, and go to state 80
    HEXINTVAL      shift, and go to state 81
    REALVAL        shift, and go to state 82
    STRINGVAL      shift, and go to state 142
    ID             shift, and go to state 83
    '('            shift, and go to state 84
    '|'            shift, and go to state 85

    primitive_val        go to state 86
    procedure_func_call  go to state 87
    expression           go to state 143
    unary_op             go to state 89


State 93

   78 procedure_func_call: ID '(' . expression_list ')'

    NULLP          shift, and go to state 72
    PLUS           shift, and go to state 73
    MINUS          shift, and go to state 74
    MUL            shift, and go to state 75
    NOT            shift, and go to state 76
    ADDRESS        shift, and go to state 77
    BOOLVAL        shift, and go to state 78
    CHARVAL        shift, and go to state 79
    DECIMALINTVAL  shift, and go to state 80
    HEXINTVAL      shift, and go to state 81
    REALVAL        shift, and go to state 82
    ID             shift, and go to state 83
    '('            shift, and go to state 84
    '|'            shift, and go to state 85

    $default  reduce using rule 108 (epsilon)

    primitive_val        go to state 86
    procedure_func_call  go to state 87
    expression_list      go to state 144
    expression           go to state 145
    unary_op             go to state 89
    epsilon              go to state 146


State 94

   59 index_assign: ID '[' . expression ']' ASS expression

    NULLP          shift, and go to state 72
    PLUS           shift, and go to state 73
    MINUS          shift, and go to state 74
    MUL            shift, and go to state 75
    NOT            shift, and go to state 76
    ADDRESS        shift, and go to state 77
    BOOLVAL        shift, and go to state 78
    CHARVAL        shift, and go to state 79
    DECIMALINTVAL  shift, and go to state 80
    HEXINTVAL      shift, and go to state 81
    REALVAL        shift, and go to state 82
    ID             shift, and go to state 83
    '('            shift, and go to state 84
    '|'            shift, and go to state 85

    primitive_val        go to state 86
    procedure_func_call  go to state 87
    expression           go to state 147
    unary_op             go to state 89


State 95

   66 declaration_no_function: declaration . declaration_no_function
   67                        | declaration .

    STRING  shift, and go to state 31
    VAR     shift, and go to state 35

    $default  reduce using rule 67 (declaration_no_function)

    declaration              go to state 95
    primitive_declaration    go to state 46
    declaration_no_function  go to state 148


State 96

   64 code_block: '{' nested_statements . '}'

    '}'  shift, and go to state 149


State 97

   62 code_block: '{' declaration_no_function . nested_statements '}'
   63           | '{' declaration_no_function . '}'

    IF      shift, and go to state 32
    WHILE   shift, and go to state 33
    FOR     shift, and go to state 34
    RETURN  shift, and go to state 36
    DO      shift, and go to state 37
    MUL     shift, and go to state 38
    ID      shift, and go to state 39
    '{'     shift, and go to state 40
    '}'     shift, and go to state 150

    nested_statements    go to state 151
    stmt                 go to state 62
    assign               go to state 49
    primitive_assign     go to state 50
    index_assign         go to state 51
    string_assign        go to state 52
    pointer_assign       go to state 53
    code_block           go to state 54
    conditions           go to state 55
    loops                go to state 56
    procedure_func_call  go to state 57
    return               go to state 63


State 98

   65 code_block: '{' epsilon . '}'

    '}'  shift, and go to state 152


State 99

   23 declarations: function declarations .

    $default  reduce using rule 23 (declarations)


State 100

   25 declarations: procedure declarations .

    $default  reduce using rule 25 (declarations)


State 101

    6 function: FUNCTION VALTYPE ID '(' parameter_list ')' '{' func_body '}' .

    $default  reduce using rule 6 (function)


State 102

   15 func_body: declarations nested_statements_with_return .

    $default  reduce using rule 15 (func_body)


State 103

   21 declarations: declaration declarations .

    $default  reduce using rule 21 (declarations)


State 104

   44 nested_statements_with_return: stmt nested_statements_with_return .

    $default  reduce using rule 44 (nested_statements_with_return)


State 105

   48 stmt: assign ';' .

    $default  reduce using rule 48 (stmt)


State 106

   52 stmt: procedure_func_call ';' .

    $default  reduce using rule 52 (stmt)


State 107

   45 nested_statements_with_return: return ';' .
   53 stmt: return ';' .

    '}'       reduce using rule 45 (nested_statements_with_return)
    $default  reduce using rule 53 (stmt)


State 108

    7 procedure: FUNCTION VOID ID '(' parameter_list ')' '{' proc_body '}' .

    $default  reduce using rule 7 (procedure)


State 109

   17 proc_body: declarations nested_statements .

    $default  reduce using rule 17 (proc_body)


State 110

   47 nested_statements: stmt nested_statements .

    $default  reduce using rule 47 (nested_statements)


State 111

   53 stmt: return ';' .

    $default  reduce using rule 53 (stmt)


State 112

   42 string_parameters: ID '[' . expression ']'
   43                  | ID '[' . expression ']' ASS STRINGVAL

    NULLP          shift, and go to state 72
    PLUS           shift, and go to state 73
    MINUS          shift, and go to state 74
    MUL            shift, and go to state 75
    NOT            shift, and go to state 76
    ADDRESS        shift, and go to state 77
    BOOLVAL        shift, and go to state 78
    CHARVAL        shift, and go to state 79
    DECIMALINTVAL  shift, and go to state 80
    HEXINTVAL      shift, and go to state 81
    REALVAL        shift, and go to state 82
    ID             shift, and go to state 83
    '('            shift, and go to state 84
    '|'            shift, and go to state 85

    primitive_val        go to state 86
    procedure_func_call  go to state 87
    expression           go to state 153
    unary_op             go to state 89


State 113
